test/grammar/quant/all/simple_invalid_0/stderr.golden
error[E3M38]: EvaluationError
  --> ${CWD}/main.k:10:8
   |
10 | main = app_conf {
   |        ^ Instance check failed
   |
 --> ${CWD}/main.k:7:1
  |
7 |         }, "invalid cluster ip"
  |  Check failed on the condition: invalid cluster ip
  |